add support for arbitrary key in data for color

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -48,6 +48,11 @@ html, body {
   margin-right: 12px;
 }
 
+.panel #colorKeys {
+  padding: 2px;
+  margin-right: 12px;
+}
+
 #chart-container {
   width: 90%;
 }
